# fmu-rabbitmq

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile-darwin-build  Dockerfile-linux-build  Dockerfile-win-build  Jenkinsfile  build-all_mac.sh  build_locally_darwin.sh  build_locally_linux.sh  development.md  docker-build-all.sh  helloworld.cpp  modelDescription copy.xml  modelDescription.xml  modelDescription.xml.bak  rbmq.ipynb  readme.md  sample.xml  ur_newmain_1ms.txt  ur_oldmain_1ms.txt
.github/workflows/: build.yml  loadLibraryTest.yml
docs/: conf.py  data-handling.rst  index.rst  overview.rst  user-manual.rst
local_tests/: readme.md  testLoadLibrary.cpp
local_tests/vsproject/: vsproject.cpp  vsproject.sln  vsproject.vcxproj  vsproject.vcxproj.filters
rabbitmq-core/: CMakeLists.txt  gtestresults.xml  it-test-rabbitmq-core  unit-test-rabbitmq-core
rabbitmq-core/src/: FmuContainerCore.cpp  FmuContainerCore.h
rabbitmq-core/test/: FmuContainerCore_test.cpp
rabbitmq-fmu/: BasicConsumer  CMakeLists.txt  data.json  data_modeldescription.json  gtestresults.xml  mkFmu.sh  modelDescription.xml
rabbitmq-fmu/gita/: modelDescription.xml
rabbitmq-fmu/src/: DataPoint.h  FmuContainer.cpp  FmuContainer.h  FmuContainerCore.cpp  FmuContainerCore.h  Iso8601TimeParser.cpp  Iso8601TimeParser.h  fmu.cpp  main.cpp  uri.c  uri.h
rabbitmq-fmu/src/message/: MessageParser.cpp  MessageParser.h
rabbitmq-fmu/src/modeldescription/: ModelDescriptionParser.cpp  ModelDescriptionParser.h
rabbitmq-fmu/src/rabbitmq/: RabbitMqHandlerException.cpp  RabbitMqHandlerException.h  RabbitmqHandler.cpp  RabbitmqHandler.cpp.bak  RabbitmqHandler.h
rabbitmq-fmu/src/tla/: TlaTester.cpp
rabbitmq-fmu/test/: FmuContainerCore_test.cpp  FmuContainerCore_test.cpp.bak  FmuContainer_test.cpp  basic_consumer.cpp  fmu_test_it copy.cpp.bak  fmu_test_it.cpp  json_test.cpp  message_parser_test.cpp  modeldescription_test.cpp  rabbitmq_test_it.cpp  rabbitmqhandler_test_it.cpp  timestamp_test.cpp  timetamp_test.cpp  xml_test.cpp
rabbitmq-fmu/xmls-for-tests/: modelDescription.xml
rabbitmq-tla-tester/: CMakeLists.txt  rabbitmq-tla-tester-main
rabbitmq-tla-tester/src/: TlaTester.cpp
rmqfmu-example/: README.md  coe.json  consume.py  gazebo_playback_data-noround.csv  modelDescription.xml  multimodel.json  publish.py  requirements.txt
rmqfmu-example/generate/: spec.mabl  spec.runtime.json
rmqfmu-example/old_scripts/: consume-Test-Publish.py  playback_gazebo_data-test.py  playback_ur_robot.py  ur_timegaps.py  validate_rbmq_output.m
rmqfmu-example/profiling logs and scripts/: gazebopl_newmain_wo3_100ms.txt
rmqfmu-example/results/: spec.mabl
scripts/: _build_base.sh  build.sh  build_linux-64.sh  build_locally_darwin.sh  build_locally_linux.sh  build_locally_win.sh  darwin64_build.sh  linux32_build.sh  linux64_build.sh  pack_fmu.sh  rabbitmq_fmu_configure.py  set_fmu_version.sh  test-win64.sh  win32_build.sh
scripts/old-scripts/: build.sh  docker-build-all.sh  win64_build.sh
server/: Dockerfile  amqp-launch.yml  amqp_data_repeater.py  consume-Test.py  consume-systemHealthData.py  consume.py  darwin-x64-dockcross  desktop_robboti_pub.py  desktop_robboti_sub.py  docker-compose.yml  gazebo_playback_data-noround.csv  gazebo_playback_data.csv  gazebo_playback_data_200ms.csv  gazebo_playback_data_2ms.csv  gazebopl_newmain_10ms.txt  gazebopl_newmain_1ms.txt  gazebopl_oldmain_wo3_100ms.txt  gazebopl_oldmain_wo3_10ms.txt  generate_data.py  mqtt-publish.py  outputs.csv  outputs_ctoff_maxage2000ms.csv  outputs_ctoff_maxage200ms.csv  playback_gazebo_data-test.py  playback_gazebo_data.py  playback_ur_robot.py  plot_profiling.m  plot_profiling2.m  publish.py  run_py.sh  stop.sh  ur_oldmain_100ms.txt  validate_rbmq_output.m  validate_rbmq_output.m~
server/profiling logs and scripts/: gazebopl_newmain_100ms.txt  gazebopl_newmain_wo3_10ms.txt  gazebopl_newmain_wo3_1ms.txt  gazebopl_oldmain_100ms.txt  gazebopl_oldmain_10ms.txt  gazebopl_oldmain_1ms.txt  ur_newmain_100ms.txt  ur_newmain_10ms.txt  ur_oldmain_10ms.txt
server/profiling results/: gazebopl_oldmain_wo3_1ms.txt  plot_profiling2.m  ur_newmain_1ms.txt  ur_oldmain_1ms.txt
ur_robot/: generate.py  modelDescription.xml
